--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^12.2.0",
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.3",
     "@faker-js/faker": "^7.6.0"
+  },
+  "devDependencies": {
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
+    "cypress": "^13.16.0",
+    "esbuild": "^0.24.0"
   }
 }
