--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "cypress.config.js",
   "scripts": {
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "allure:get:report": "./node_modules/.bin/allure generate allure-results -o allure-report --clean",
+    "allure:open": "./node_modules/.bin/allure open allure-report"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +16,10 @@
   },
   "devDependencies": {
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
+    "allure-commandline": "^2.32.0",
+    "allure-cypress": "^3.0.6",
     "cypress": "^13.16.0",
+    "cypress-on-fix": "^1.0.3",
     "esbuild": "^0.24.0"
   }
 }
